[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tuitter"
version = "0.1.0"
description = "A beautiful TUI-based social media client for the modern terminal"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "tuitter Team", email = "team@tuitter.com"}
]
keywords = ["tui", "social-media", "terminal", "ascii-art"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Terminals",
]

dependencies = [
    "textual>=0.40.0",
    "requests>=2.28.0",
    "Pillow>=9.0.0",
    "textual-imageview>=0.1.0",
    "opencv-python",
    "textual-web",
]

[project.scripts]
tuitter = "tuitter.main:main"

[project.urls]
Homepage = "https://github.com/kazakhpunk/tuitter"
Repository = "https://github.com/kazakhpunk/tuitter"
"Bug Tracker" = "https://github.com/kazakhpunk/tuitter/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["tuitter*"]

[tool.setuptools.package-data]
tuitter = ["*.tcss", "*.txt", "*.json"]

[tool.bumpver]
current_version = "v0.1.0"
version_pattern = "vMAJOR.MINOR.PATCH"
commit_message = "bump version {old_version} -> {new_version}"
tag_message = "{new_version}"
tag_scope = "default"
pre_commit_hook = ""
post_commit_hook = ""
commit = true
tag = true

[tool.bumpver.file_patterns]
"pyproject.toml" = [
    'current_version = "{version}"',
    'version = "{pep440_version}"'
]

