[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tuitter"
version = "0.1.0"
description = "A beautiful TUI-based social media client for the modern terminal"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "tuitter Team", email = "team@tuitter.com"}
]
keywords = ["tui", "social-media", "terminal", "ascii-art"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Terminals",
]

dependencies = [
    "textual>=0.40.0",
    "textual-web>=0.1.0",
    "requests>=2.28.0",
    "Pillow>=9.0.0",
    "opencv-python>=4.8.0",
    "textual-imageview>=0.1.0",
    "python-dotenv>=1.0.0",
    "keyring>=24.0.0",
    "numpy>=1.24.0",  # Required by asciifer
    "rich>=13.0.0",   # used directly by textual and rendering
    "SQLAlchemy>=2.0.0",
    "pywin32>=305 ; sys_platform == 'win32'"  # optional Windows DPAPI support (win32crypt)
]

[project.scripts]
tuitter = "tuitter.main:main"

[project.urls]
Homepage = "https://github.com/kazakhpunk/tuitter"
Repository = "https://github.com/kazakhpunk/tuitter"
"Bug Tracker" = "https://github.com/kazakhpunk/tuitter/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["tuitter*", "asciifer*"]

[tool.setuptools.package-data]
tuitter = ["*.tcss", "*.txt", "*.json"]
asciifer = ["*"]
